Male htmlToPlain null safe, some cleanup